
install(
    FILES
        mesh.glsl
        gui.glsl
        shading.glsl
        blending.glsl
        tesselation.glsl
        utility.glsl
        filter.glsl
        debug.glsl
        fluid.glsl
        particle.glsl
        raycast.glsl
        orange-book.glsl
    DESTINATION ${HEADER_INSTALL_PATH}/shader
    )
