
install(
    FILES
        blending.glsl
        blur.glsl
        debug-normal.glsl
        deferred-shading.glsl
        depth-of-field.glsl
        downsample.glsl
        fluid.glsl
        fxaa.glsl
        geometry-shader.glsl
        gui.glsl
        light.glsl
        mesh.glsl
        mesh-animation.glsl
        motion-blur.glsl
        orange-book.glsl
        particles.glsl
        picking.glsl
        pixel-velocity.glsl
        scattering.glsl
        shadow-mapping.glsl
        sky.glsl
        tesselation-shader.glsl
        textures.glsl
        tonemap.glsl
        transparency.glsl
        volume.glsl
    DESTINATION ${SHADER_INSTALL_PATH}
    )
