
set(SOURCES
        states/state.cpp
        states/render-state.cpp
        states/shader-input-state.cpp
        states/vbo-state.cpp
        states/fbo-state.cpp
        states/texture-state.cpp
        states/shader-state.cpp
        states/light-state.cpp
        states/material-state.cpp
        states/camera.cpp
        states/mesh-state.cpp
        states/model-transformation.cpp
        states/bones-state.cpp
        states/fog-state.cpp
        states/tesselation-state.cpp
        states/blit-state.cpp
        states/depth-state.cpp
        states/blend-state.cpp
        states/particle-state.cpp
        states/assimp-importer.cpp
)

install(
    FILES
        shader-input-state.h
        assimp-importer.h
        blend-state.h
        blit-state.h
        depth-state.h
        bones-state.h
        camera.h
        fbo-state.h
        fog-state.h
        light-state.h
        mesh-state.h
        material-state.h
        model-transformation.h
        render-state.h
        shader-state.h
        state.h
        tesselation-state.h
        texture-state.h
        particle-state.h
        vbo-state.h
    DESTINATION ${HEADER_INSTALL_PATH}/states
    )
