
set(SOURCES
        states/state.cpp
        states/shader-input-state.cpp
        states/fbo-state.cpp
        states/texture-state.cpp
        states/shader-state.cpp
        states/material-state.cpp
        states/camera.cpp
        states/model-transformation.cpp
        states/tesselation-state.cpp
        states/blit-state.cpp
        states/depth-state.cpp
        states/blend-state.cpp
        states/feedback-state.cpp
        states/picking.cpp
        states/shader-configurer.cpp
        states/state-node.cpp
        states/tonemap.cpp
        states/depth-of-field.cpp
        states/filter.cpp
)

install(
    FILES
        shader-input-state.h
        blend-state.h
        blit-state.h
        depth-state.h
        camera.h
        fbo-state.h
        material-state.h
        model-transformation.h
        shader-state.h
        state.h
        tesselation-state.h
        texture-state.h
        feedback-state.h
        picking.h
        shader-configurer.h
        state-node.h
        fullscreen-pass.h
        tonemap.h
        depth-of-field.h
        filter.h
    DESTINATION ${HEADER_INSTALL_PATH}/states
    )

install(
    FILES
        shader/transparency.glsl
        shader/blending.glsl
        shader/tesselation-shader.glsl
        shader/textures.glsl
        shader/depth_of_field.glsl
        shader/blur.glsl
        shader/downsample.glsl
        shader/sampling.glsl
    DESTINATION ${SHADER_INSTALL_PATH}
    )
